Fix typingIndicator alignment bug

--- a/p5/luna-cycle/public/css/typing.css
+++ b/p5/luna-cycle/public/css/typing.css
@@ -37,13 +37,13 @@ body {
 }
  */
 .typing-indicator {
-  background-color: limegreen;
+  background-color: mediumseagreen;
   will-change: transform;
   width: auto;
   border-radius: 50px;
   padding: 20px;
   display: table;
-  margin: 0 auto;
+  margin: 0;
   position: relative;
   align-self: flex-start;
   -webkit-animation: 2s bulge infinite ease-out;
@@ -57,7 +57,7 @@ body {
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  background-color: limegreen;
+  background-color: mediumseagreen;
 }
 .typing-indicator::after {
   height: 10px;
